[gd_scene load_steps=9 format=3 uid="uid://cqk113th7doia"]

[ext_resource type="Texture2D" uid="uid://ow82hieyianu" path="res://Assets/GUI/background blurred.png" id="1_27s2j"]
[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_ipcsu"]
[ext_resource type="Theme" uid="uid://c2jlnqd4fwdh" path="res://Scenes/menu.tres" id="2_wk2gi"]
[ext_resource type="Texture2D" uid="uid://24w1lq47tiso" path="res://Assets/Cat.png" id="3_o7qkp"]
[ext_resource type="Texture2D" uid="uid://c2sf5g53asb8s" path="res://Assets/cool_monsta.png" id="5_ptu76"]
[ext_resource type="Texture2D" uid="uid://cl601mjfw4e5v" path="res://Assets/Military Cat.png" id="6_2ysbg"]
[ext_resource type="Texture2D" uid="uid://gwol1dyygpcc" path="res://Assets/Miner Cat.png" id="7_1he70"]
[ext_resource type="Texture2D" uid="uid://7dxr7ms7aga6" path="res://Assets/spider.png" id="8_8l6sy"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ipcsu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1156.0
offset_bottom = 769.0
texture = ExtResource("1_27s2j")
expand_mode = 1
stretch_mode = 4

[node name="Cat" type="Sprite2D" parent="Background"]
position = Vector2(1106, 586)
texture = ExtResource("3_o7qkp")

[node name="CoolMonsta" type="Sprite2D" parent="Background"]
position = Vector2(121, 113)
scale = Vector2(0.315, 0.315)
texture = ExtResource("5_ptu76")

[node name="MilitaryCat" type="Sprite2D" parent="Background"]
position = Vector2(628, 586)
texture = ExtResource("6_2ysbg")

[node name="MinerCat" type="Sprite2D" parent="Background"]
position = Vector2(887, 586)
texture = ExtResource("7_1he70")

[node name="Spider" type="Sprite2D" parent="Background"]
position = Vector2(142, 508)
rotation = 3.14159
scale = Vector2(1, -1)
texture = ExtResource("8_8l6sy")

[node name="StartMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="StartMenu"]
layout_mode = 0
offset_left = 423.0
offset_top = 110.0
offset_right = 743.0
offset_bottom = 213.0
theme = ExtResource("2_wk2gi")
theme_override_font_sizes/font_size = 74
text = "ANOMALIES"

[node name="Button" type="Button" parent="StartMenu"]
layout_mode = 0
offset_left = 450.0
offset_top = 335.0
offset_right = 693.0
offset_bottom = 441.0
theme_override_font_sizes/font_size = 31
text = "PLAY"

[node name="LevelsMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StandardGame" type="Button" parent="LevelsMenu"]
layout_mode = 0
offset_left = 351.0
offset_top = 254.0
offset_right = 547.0
offset_bottom = 374.0
text = "Standard Game"

[node name="RandomMap" type="Button" parent="LevelsMenu"]
layout_mode = 0
offset_left = 619.0
offset_top = 253.0
offset_right = 816.0
offset_bottom = 378.0
text = "Random Map"

[connection signal="button_down" from="StartMenu/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="LevelsMenu/StandardGame" to="." method="_on_standard_game_button_down"]
[connection signal="button_down" from="LevelsMenu/RandomMap" to="." method="_on_random_map_button_down"]
